k8s/janus-mainnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: janus-mainnet
  name: janus-mainnet
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: janus-mainnet
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/qnode-network: "true"
        io.kompose.service: janus-mainnet
    spec:
      containers:
        - args:
            - --bind
            - 0.0.0.0
            - --port
            - "23890"
            - --log-file
            - /logs/janus-mainnet-logs.txt
            - --dev
            - --https-key
            - /https/key.pem
            - --https-cert
            - /https/cert.pem
          image: ripply/janus:0.1.3
          name: janus-mainnet
          ports:
            - containerPort: 23890
          resources: {}
          volumeMounts:
            - mountPath: /https
              name: janus-mainnet-volume
            - mountPath: /logs
              name: janus-mainnet-volume
      restartPolicy: Always
      volumes:
        - name: janus-mainnet-volume
          persistentVolumeClaim:
            claimName: janus-mainnet-volume
        
status: {}
