k8s/qnode-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: qnode-api
  name: qnode-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qnode-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/qnode-network: "true"
        io.kompose.service: qnode-api
    spec:
      containers:                 
       - image: meherett/qnode-api:latest
         name: qnode-api
         ports:
            - containerPort: 8080
         resources: {}
      restartPolicy: Always
status: {}
