k8s/qnode-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: qnode-web
  name: qnode-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qnode-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/qnode-network: "true"
        io.kompose.service: qnode-web
    spec:
      containers:
        - image: meherett/qnode-web:latest
          name: qnode-web
          ports:
            - containerPort: 9090
          resources: {}
      restartPolicy: Always
status: {}
