k8s/qtum-testnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: qtum-testnet
  name: qtum-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qtum-testnet
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/qnode-network: "true"
        io.kompose.service: qtum-testnet
    spec:
      containers:
        - args:
            - qtumd
            - -testnet
            - -txindex
            - -addrindex=1
            - -rpcbind=0.0.0.0:3889
            - -rpcallowip=0.0.0.0/0
            - -logevents
            - -rpcuser=qtum
            - -rpcpassword=testpasswd
            - -deprecatedrpc=accounts
            - -printtoconsole
          image: qtum/qtum:latest
          name: qtum-testnet
          ports:
            - containerPort: 3889
          resources: {}
          volumeMounts:
            - mountPath: /root/.qtum
              name: qtum-testnet-volume
      restartPolicy: Always
      volumes:
        - name: qtum-testnet-volume
          persistentVolumeClaim:
            claimName: qtum-testnet-volume
status: {}
