k8s/janus-mainnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: janus-mainnet
  name: janus-mainnet
spec:
  ports:
    - name: "23890"
      port: 23890
      targetPort: 23890
  selector:
    io.kompose.service: janus-mainnet
