k8s/qtum-mainnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: qtum-mainnet
  name: qtum-mainnet
spec:
  ports:
    - name: "3890"
      port: 3890
      targetPort: 3890
  selector:
    io.kompose.service: qtum-mainnet
