k8s/qtum-testnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: qtum-testnet
  name: qtum-testnet
spec:
  ports:
    - name: "3889"
      port: 3889
      targetPort: 3889
  selector:
    io.kompose.service: qtum-testnet
