k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: default
spec:
 ingressClassName: nginx
 rules:
  - host: "qnode.meherett.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qnode-web
            port:
              number: 9090
  - host: "qnode.meherett.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: qnode-api
            port:
              number: 8080
  - host: "api.qnode.meherett.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qnode-api
            port:
              number: 8080
  - host: "mainnet.qnode.meherett.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qnode-api
            port:
              number: 8080
  - host: "testnet.qnode.meherett.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qnode-api
            port:
              number: 8080
